Restructuring api for domain separation #340